# se-toolkit-lab-7

./: .env.bot.example  .gitignore  README.md  docker-compose.yml  draft.txt
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: commands.py  natural_language.py
bot/services/: llm_client.py  lms_client.py  tools.py
