[project]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot for LMS integration"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bot", "config"]
packages = ["handlers", "services"]
